path: Check if JSONPath expression is NULL

https://bugzilla.gnome.org/show_bug.cgi?id=708318