json-glib/json-path.c
@@ -419,6 +419,8 @@ json_path_compile (JsonPath    *path,
   PathNode *root = NULL;
   GList *nodes;
 
+  g_return_val_if_fail (expression != NULL, FALSE);
+
   p = expression;
 
   while (*p != '\0')
